# GeometricKernels

./: .flake8  .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION  dev_requirements.txt  extrapylint  pylintrc  pyproject.toml  requirements-3.10.txt  requirements-3.11.txt  requirements-3.8.txt  requirements-3.9.txt  requirements.txt  setup.py  test_requirements-3.10.txt  test_requirements-3.11.txt  test_requirements-3.12.txt  test_requirements-3.8.txt  test_requirements-3.9.txt  test_requirements.txt
.github/ISSUE_TEMPLATE/: bugs-performance-issues.md  doc-issue.md  feature-request.md  other-issue.md
.github/workflows/: code-style.yaml  docs.yaml  publish-pypi.yaml  quality-checks.yaml
docs/: README.md  bibliography.html  bibliography.rst  class_diagram.md  conf.py  docutils.conf  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  references.bib  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/coverage_html/: class_index.html  function_index.html  index.html  status.json  z_04f23f8ef5a3ea2f___init___py.html  z_04f23f8ef5a3ea2f_test_basics_py.html  z_04f23f8ef5a3ea2f_test_circle_py.html  z_04f23f8ef5a3ea2f_test_eigenfunctions_py.html  z_04f23f8ef5a3ea2f_test_eigenvalues_py.html  z_04f23f8ef5a3ea2f_test_graph_edges_py.html  z_04f23f8ef5a3ea2f_test_graph_py.html  z_04f23f8ef5a3ea2f_test_hamming_graph_py.html  z_04f23f8ef5a3ea2f_test_hyperbolic_py.html  z_04f23f8ef5a3ea2f_test_hypercube_graph_py.html  z_04f23f8ef5a3ea2f_test_hypersphere_py.html  z_04f23f8ef5a3ea2f_test_lie_groups_py.html  z_04f23f8ef5a3ea2f_test_mesh_py.html  z_04f23f8ef5a3ea2f_test_product_discrete_spectrum_space_py.html  z_04f23f8ef5a3ea2f_test_spd_py.html  z_06867b7475476775___init___py.html  z_06867b7475476775_extras_py.html  z_06e44dcce29f0c85___init___py.html  z_06e44dcce29f0c85_extras_py.html  z_0b07351c1ec3ca47__remote_module_non_scriptable_py.html  z_1b91cefa446f934b___init___py.html  z_1b91cefa446f934b_base_py.html  z_1b91cefa446f934b_circle_py.html  z_1b91cefa446f934b_eigenfunctions_py.html  z_1b91cefa446f934b_graph_edges_py.html  z_1b91cefa446f934b_graph_py.html  z_1b91cefa446f934b_hamming_graph_py.html  z_1b91cefa446f934b_hyperbolic_py.html  z_1b91cefa446f934b_hypercube_graph_py.html  z_1b91cefa446f934b_hypersphere_py.html  z_1b91cefa446f934b_lie_groups_py.html  z_1b91cefa446f934b_mesh_py.html  z_1b91cefa446f934b_product_py.html  z_1b91cefa446f934b_so_py.html  z_1b91cefa446f934b_spd_py.html  z_1b91cefa446f934b_su_py.html  (+58 more)
docs/examples/: CustomSpacesAndKernels.html  CustomSpacesAndKernels.ipynb  CustomSpacesAndKernels.nblink  Graph.html  Graph.ipynb  GraphEdges.html  GraphEdges.ipynb  GraphEdges.nblink  Grassmannian.nblink  HammingGraph.html  HammingGraph.nblink  Hyperbolic.html  Hyperbolic.ipynb  Hypercube.nblink  HypercubeGraph.html  HypercubeGraph.ipynb  HypercubeGraph.nblink  Hypersphere.html  Mesh.html  Mesh.ipynb  SPD.html  SPD.ipynb  SpecialOrthogonal.html  SpecialOrthogonal.ipynb  SpecialUnitary.html  SpecialUnitary.ipynb  SpecialUnitary.nblink  Stiefel.nblink  Torus.html  Torus.ipynb  examples.html  examples.rst  index.html  index.rst  introduction.html  introduction.rst
docs/theory/: addition_theorem.html  addition_theorem.rst  compact.html  compact.rst  feature_maps.html  feature_maps.rst  graphs.html  graphs.rst  hamming_graph.html  hamming_graph.rst  hodge.rst  hypercube.rst  hypercube_graph.html  hypercube_graph.rst  index.html  index.rst  meshes.html  meshes.rst  product_kernels.html  product_kernels.rst  product_spaces.html  product_spaces.rst  symmetric.html  symmetric.rst
geometric_kernels/: __init__.py  _logging.py  _typing.py  basis.py  eagerpy_extras.py  eigenfunctions.py  jax.py  tensorflow.py  torch.py  types.py  utils.py  version.py
geometric_kernels/backends/: README.md
geometric_kernels/feature_maps/: __init__.py  base.py  deterministic.py  probability_densities.py  random_phase.py  rejection_sampling.py
geometric_kernels/frontends/: __init__.py  gpflow.py  gpjax.py  gpytorch.py
geometric_kernels/kernels/: __init__.py  abstract_kernel.py  base.py  feature_map.py  feature_maps.py  geometric_kernel.py  geometric_kernels.py  hodge_compositional.py  karhunen_loeve.py  matern_kernel.py  matern_kernel_hamming_graph.py  product.py
geometric_kernels/lab_extras/: __init__.py  extras.py
geometric_kernels/resources/: precomputed_characters.json  precomputed_grassmanian_zsf.json
geometric_kernels/sampling/: __init__.py  base.py  feature_maps.py  fourier.py  probability_densities.py  samplers.py  spectral_density_sample.py
geometric_kernels/spaces/: __init__.py  abstract_space.py  base.py  circle.py  compute_characters.py  eigenfunctions.py  graph.py  graph_edge.py  graph_edges.py  grassmannian.py  hamming_graph.py  homogeneous_spaces.py  hyperbolic.py  hypercube.py  hypercube_graph.py  hypersphere.py  lie_groups.py  lie_spaces.py  manifold.py  manifolds.py  mesh.py  precomputed_characters.json  so.py  (+6 more)
notebooks/: CustomSpacesKernels.ipynb  EdgeSpaceGraph.ipynb  EdgeSpaceSimplicialComplex.ipynb  FastMaternForHammingGraph.ipynb  Graph.ipynb  GraphEdges.ipynb  Grassmannian.ipynb  GrassmannianWork.ipynb  HammingGraph.ipynb  Hyperbolic.ipynb  Hypercube.ipynb  Hypersphere.ipynb  Mesh.ipynb  SOGroup.ipynb  SPD.ipynb  SUGroup.ipynb  SimplicialComplex.ipynb  SpecialOrthogonal.ipynb  SpecialUnitary.ipynb  Stiefel copy.ipynb  Stiefel.ipynb  Torus.ipynb  bo_sphere.ipynb  compare_spectral_density_sampling_hyperbolic.ipynb  gpr_gpjax.ipynb  gpr_jax.py  gpr_torch.py  graphs.ipynb  hyperbolic_space.ipynb  mesh_gpr_gpflow.ipynb  mesh_gpr_gpflow.py  product.ipynb  product_kernel.py  sampling_hyperbolic_numpy.ipynb  sampling_sphere_numpy.ipynb  torus.py
scripts/: add_toc.py  compute_characters.py  compute_grassmannian_zsf.py  increment_header_levels.py  nblinks_for_ipynbs.py  save_grassmanian_zsf.py
spaces/: graph.py
tests/: __init__.py  data.py  helper.py  test_dtypes.py  test_import.py  test_notebooks.py  test_product.py
(+287 files in other folders)
