[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geometric_kernels"
authors = [
    {name = "The GeometricKernels Contributors", email = "geometric-kernels@googlegroups.com"},
]
description="A Python Package offering geometric kernels in NumPy, TensorFlow, PyTorch, and Jax."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords=[
    "geometric-kernels",
]
requires-python = ">=3.9"
dependencies = [
    "backends", # >=1.7",
    "einops",
    "geomstats",
    "numpy>=1.16",
    "opt-einsum",
    "plum-dispatch",
    "potpourri3d",
    "robust_laplacian",
    "scipy>=1.3",
    "spherical-harmonics-basis",
    "sympy~=1.13",
]
version="0.3.1"

[project.urls]
Documentation = "https://geometric-kernels.github.io/"
Source = "https://github.com/geometric-kernels/GeometricKernels"

[tool.isort]
profile = "black"
skip_glob = [
    "geometric_kernels/__init__.py",
]
known_third_party = [
    "lab",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
allow_redefinition = true


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  # --- shared from test_requirements.txt ---
  "ipykernel",
  "backends>=1.5.4",
  "plotly",
  "kaleido",
  "black==24.3.0",
  "flake8==7.0.0",
  "isort==5.13.2",
  "autoflake",
  "pytest",
  "pytest-cov",
  "nbmake",
  "mypy",
  "scikit-learn",
  "geoopt",

  # scipy
  'scipy==1.10.1; python_version == "3.8"',
  'scipy==1.12.0; python_version >= "3.9" and python_version < "3.12"',

  # typing-extensions only required on newer pins in 3.10/3.11 files
  'typing_extensions>=4.6; python_version >= "3.10" and python_version < "3.12"',

  # Torch
  "torch==2.1.2",
  # gpytorch
  'gpytorch; python_version < "3.10"',
  'gpytorch==1.11; python_version >= "3.10" and python_version < "3.12"',
  "botorch>=0.9",

  # TensorFlow / GPflow / TFP split
  'tensorflow==2.13.0; python_version=="3.8"',
  'tensorflow==2.13.1; python_version=="3.9"',
  'tensorflow==2.15;   python_version>="3.10" and python_version<"3.12"',
  'tensorflow-probability==0.20.1; python_version < "3.10"',
  'tensorflow-probability==0.23;   python_version >= "3.10" and python_version < "3.12"',
  'gpflow==2.9.0; python_version < "3.10"',
  'gpflow==2.9;    python_version >= "3.10" and python_version < "3.12"',

  # JAX family
  'jax==0.4.13;    python_version < "3.10"',
  'jaxlib==0.4.13; python_version < "3.10"',
  'jax==0.4.23;    python_version >= "3.10" and python_version < "3.12"',
  'jaxlib==0.4.23; python_version >= "3.10" and python_version < "3.12"',
  'jaxtyping==0.2.25; python_version == "3.9"',
  'jaxtyping;         python_version != "3.9"',
  'optax==0.1.7; python_version == "3.8"',
  'optax;        python_version >= "3.9"',
]